Updated the css and fixed the alignment for the search bar

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App .App-header {
   text-align: center;
   font-size: 36px;
